--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
       </div>
     </div>
     <!-- Page content here -->
-   <div class="avatar">
-  <div class="w-24 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
-    <img src="spiderman-png-47343.png" />
-  </div>
-</div>
+ <div class="card w-96 glass">
+  <figure><img src="spiderman-png-47343.png" alt="car!"/></figure>
+  <div class="card-body">
+    <h2 class="card-title">Fariz Rizky Syahputra</h2>
+    <p>Saya adalah seorang laki-laki yang ingin bercita cita menjadi sukses dan mengangkat derajat orang tua.</p>
+    <p>Dan bekal saya setelah lulus memperbanyak pengetahuan meningkatkan soft skil</p>
+    <div class="card-actions justify-end">
+      <button class="btn btn-primary">Learn now!</button>
+    </div>
   </div>
 </div>
 </body>
